# patch-tools

./: .gitignore  .releaserc.json  NOTICE  README.md  justfile  package.json
.github/: dependabot.yml
.github/workflows/: release.yml
engine/: build.gradle.kts  gradle.properties  settings.gradle.kts
engine/gradle/: gradle-daemon-jvm.properties  libs.versions.toml
engine/src/main/kotlin/dev/valonso/tools/engine/: EngineEvent.kt  EngineTypes.kt  MorpheEngine.kt
engine/src/main/kotlin/dev/valonso/tools/engine/apk/: ApkInputSupport.kt  LoadedApk.kt
engine/src/main/kotlin/dev/valonso/tools/engine/fingerprint/: MethodFeatures.kt
engine/src/main/kotlin/dev/valonso/tools/engine/jni/: JniFacade.kt
engine/src/main/kotlin/dev/valonso/tools/engine/session/: EngineSession.kt  (+1 more)
patch-tools/: Cargo.toml  build.rs
patch-tools/src/: access_flags.rs  diff.rs  engine_jni.rs  main.rs  morphe_render.rs  search.rs  types.rs
patch-tools/src/cli/: app.rs  mod.rs
patch-tools/src/daemon/: client.rs  engine_worker.rs  mod.rs  resolver.rs  runtime.rs  server.rs
patch-tools/src/fingerprint/: candidates.rs  common.rs  generate.rs  index.rs  map.rs  mod.rs  stability.rs  tokens.rs  uniqueness.rs  variants.rs
patch-tools/src/install/: adb.rs  mod.rs  render.rs  summary.rs
patch-tools/src/output/: execution.rs  formatters.rs  helpers.rs  inspect.rs  mod.rs  render.rs  style.rs
patch-tools/src/syndiff/: mod.rs  syntax_delimiters.rs  syntax_graph.rs  syntax_tree.rs
patch-tools/templates/: AGENTS.md  main.kts
proto/: patch_tools.proto
release/: morphe-dependency-notes.cjs
(+7 files in other folders)
