[package]
name = "patch-tools"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
jni = { version = "0.22.4", features = ["invocation"] }
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "io-util",
    "net",
    "signal",
    "sync",
    "time",
] }
anyhow = "1"
prost = "0.14.3"
tempfile = "3.27.0"
libc = "0.2"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
owo-colors = "4"
supports-color = "3"
similar = "3.0.0"
nucleo-matcher = "0.3.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-util = { version = "0.7", features = ["rt"] }
itertools = "0.14"
rayon = "1"
tree-sitter = "0.26.8"
tree-sitter-smali = { version = "0.1.3", package = "tree-sitter-smali-valonsodev" }
heapless = "0.9.2"
rustc-hash = "2.1.2"
strsim = "0.11.1"
tree-sitter-xml = "0.7.0"
adb_client = "3.2.0"
quick-xml = "0.39.2"
pathfinding = "4"
zstd = { version = "0.13", default-features = false }

[build-dependencies]
prost-build = "0.14.3"
toml = "1.1.2"
zstd = { version = "0.13", default-features = false }

[lints.clippy]
pedantic = "warn"
